<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Calculator</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cancelled">Computation cancelled.</string>
    <string name="choice_dark_mode">Dark</string>
    <string name="choice_light_mode">Light</string>
    <string name="choice_system_mode">Set by Battery Saver</string>
    <string name="cleared">cleared</string>
    <string name="collapse">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="const_e">e</string>
    <string name="const_pi">π</string>
    <string name="desc_clr">clear</string>
    <string name="desc_collapsed">advanced functions collapsed</string>
    <string name="desc_comma">comma</string>
    <string name="desc_const_e">Euler\'s number</string>
    <string name="desc_const_pi">pi</string>
    <string name="desc_del">delete</string>
    <string name="desc_eq">equals</string>
    <string name="desc_expanded">advanced functions expanded</string>
    <string name="desc_formula">No formula</string>
    <string name="desc_fun_10pow">ten to the power of</string>
    <string name="desc_fun_arccos">inverse cosine</string>
    <string name="desc_fun_arcsin">inverse sine</string>
    <string name="desc_fun_arctan">inverse tangent</string>
    <string name="desc_fun_cos">cosine</string>
    <string name="desc_fun_exp">exponential function</string>
    <string name="desc_fun_ln">natural logarithm</string>
    <string name="desc_fun_log">logarithm</string>
    <string name="desc_fun_sin">sine</string>
    <string name="desc_fun_tan">tangent</string>
    <string name="desc_inv_off">show inverse functions</string>
    <string name="desc_inv_on">hide inverse functions</string>
    <string name="desc_inv_turned_off">inverse functions hidden</string>
    <string name="desc_inv_turned_on">inverse functions shown</string>
    <string name="desc_lparen">left parenthesis</string>
    <string name="desc_memory_add">Memory add</string>
    <string name="desc_memory_recall">Memory recall</string>
    <string name="desc_memory_store">Memory store</string>
    <string name="desc_memory_subtract">Memory minus</string>
    <string name="desc_mode_deg">degree mode</string>
    <string name="desc_mode_rad">radian mode</string>
    <string name="desc_navigate_up">Navigate up</string>
    <string name="desc_op_add">plus</string>
    <string name="desc_op_div">divide</string>
    <string name="desc_op_fact">factorial</string>
    <string name="desc_op_mul">multiply</string>
    <string name="desc_op_pct">percent</string>
    <string name="desc_op_pow">power</string>
    <string name="desc_op_sqr">squared</string>
    <string name="desc_op_sqrt">square root</string>
    <string name="desc_op_sub">minus</string>
    <string name="desc_parens">left or right parenthesis</string>
    <string name="desc_point">point</string>
    <string name="desc_restore">insert this item into the main display</string>
    <string name="desc_result">No result</string>
    <string name="desc_rparen">right parenthesis</string>
    <string name="desc_switch_deg">switch to degrees</string>
    <string name="desc_switch_rad">switch to radians</string>
    <string name="dialog_clear">Clear history and memory?</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="dismiss">Dismiss</string>
    <string name="domain_error">Domain error</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_aborted">Aborted</string>
    <string name="error_nan">Undefined</string>
    <string name="error_syntax">Format error</string>
    <string name="error_zero_divide">Can\'t divide by 0</string>
    <string name="expand">Expand</string>
    <string name="exponential">exp</string>
    <string name="fun_arccos">cos⁻¹</string>
    <string name="fun_arcsin">sin⁻¹</string>
    <string name="fun_arctan">tan⁻¹</string>
    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="gm3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="gm3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="gm3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="gm3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="gm3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="gm3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="lparen">(</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="memory_add">M+</string>
    <string name="memory_recall">MR</string>
    <string name="memory_store">MS</string>
    <string name="memory_subtract">M−</string>
    <string name="menu_clear_history">Clear</string>
    <string name="menu_dark_mode">Choose theme</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_licenses">Open source licenses</string>
    <string name="menu_privacy">Privacy policy</string>
    <string name="mode_deg">DEG</string>
    <string name="mode_rad">RAD</string>
    <string name="msg_incomplete_history">You may only be able to see recent history. To try and fix the issue, go to Settings and clear app data or app storage.</string>
    <string name="msg_no_space">There isn’t enough space on this device to save long-term history.</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="mtrl_switch_thumb_group_name">circle_group</string>
    <string name="mtrl_switch_thumb_path_checked">M4,16 A12,12 0 0,1 16,4 H16 A12,12 0 0,1 16,28 H16 A12,12 0 0,1 4,16</string>
</resources>