<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="0dp">
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_0_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_0_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.23"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_1_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_1_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.44"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_2_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.46"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_2_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_3_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.67"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_3_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.86"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_4_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.88"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/advanced_column_4_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.96"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/op_sqrt"
        android:src="@drawable/glyph_op_sqrt"
        android:contentDescription="@string/desc_op_sqrt"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_0_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_0_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/op_sqr"
        android:src="@drawable/glyph_op_sqr"
        android:contentDescription="@string/desc_op_sqr"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_0_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_0_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/const_pi"
        android:src="@drawable/glyph_const_pi"
        android:contentDescription="@string/desc_const_pi"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_1_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_1_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/op_pow"
        android:src="@drawable/glyph_op_pow"
        android:contentDescription="@string/desc_op_pow"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_2_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_2_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/op_fact"
        android:src="@drawable/glyph_op_fact"
        android:contentDescription="@string/desc_op_fact"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_3_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_3_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/toggle_mode"
        android:src="@drawable/glyph_mode_deg"
        android:contentDescription="@string/desc_switch_deg"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_0_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_0_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_sin"
        android:src="@drawable/glyph_fun_sin"
        android:contentDescription="@string/desc_fun_sin"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_1_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_1_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_arcsin"
        android:src="@drawable/glyph_fun_arcsin"
        android:contentDescription="@string/desc_fun_arcsin"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_1_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_1_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_cos"
        android:src="@drawable/glyph_fun_cos"
        android:contentDescription="@string/desc_fun_cos"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_2_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_2_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_arccos"
        android:src="@drawable/glyph_fun_arccos"
        android:contentDescription="@string/desc_fun_arccos"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_2_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_2_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_tan"
        android:src="@drawable/glyph_fun_tan"
        android:contentDescription="@string/desc_fun_tan"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_3_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_3_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_arctan"
        android:src="@drawable/glyph_fun_arctan"
        android:contentDescription="@string/desc_fun_arctan"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_3_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_3_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_1_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/toggle_inv"
        android:src="@drawable/glyph_inv"
        android:contentDescription="@string/desc_inv_off"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_0_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_0_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/const_e"
        android:src="@drawable/glyph_const_e"
        android:contentDescription="@string/desc_const_e"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_1_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_1_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_ln"
        android:src="@drawable/glyph_fun_ln"
        android:contentDescription="@string/desc_fun_ln"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_2_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_2_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_exp"
        android:src="@drawable/glyph_fun_exp"
        android:contentDescription="@string/desc_fun_exp"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_2_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_2_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_log"
        android:src="@drawable/glyph_fun_log"
        android:contentDescription="@string/desc_fun_log"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_3_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_3_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.padbutton.PadImageButton
        android:id="@+id/fun_10pow"
        android:src="@drawable/glyph_fun_10pow"
        android:contentDescription="@string/desc_fun_10pow"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_3_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_3_left"
        app:layout_constraintTag="button_adv_collapsible"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_2_top"
        style="@style/AdvancedPadButtonStyle"/>
    <com.android.calculator2.common.view.arrowindicator.ArrowIndicator
        android:id="@+id/collapse_expand"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/advanced_row_0_bottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/advanced_column_4_right"
        app:layout_constraintStart_toStartOf="@+id/advanced_column_4_left"
        app:layout_constraintTop_toBottomOf="@+id/advanced_row_0_top"
        style="@style/KeypadButtonStyle"/>
</merge>
